src/styles/_searchMovies.scss
.background-styles {
    margin: 0 auto;
    position: absolute;
    top: 100px;
    background-image: url(../images/background-movies.png);
    background-repeat: no-repeat;
    background-size:cover;
    height: 90vh;
    width: 100vw;
    z-index: -1;
    opacity: .3;
    filter: blur(3px);
    
}

.container {
    margin:  auto;
    max-width: 100vw;
    height: auto;
    padding: 0px 0px;
    z-index: 3;
    filter: revert;
}

@media (min-width: 765px) {
    .container {
        padding-top: 168px;
        padding-bottom: 168px;
    }
}

.search-title {
    display: block;
    font-size: 1.5rem;
    text-align: center;
    margin-top: 75px;
    margin-bottom: 25px;
    text-transform: uppercase;
}

.search-box-container {
    padding: 10px 25px 30px 25px;
    margin: 10px 50px;
    background-color: #14384aa3;
    border-radius: 5px;
    // border-color: rgba(255, 68, 0, 0.584);
    border: solid 1px rgba(255, 255, 255, 0.146);
}

@media (min-width: 765px) {
   .search-box-container {
       margin: 10px 100px;
       padding: 100px 50px 125px 50px;
   }
}

.search-message {
    font-size: 16px;
    text-align: center;
}

@media (min-width: 765px) {
    .search-message {
        font-size: 1.5rem;
 }
}

.form {
    display: grid;
}

.label {
    font-size: 1.2rem;
    margin-bottom: .4rem;
    text-transform: uppercase;
}

.input {
    font-size: 1rem;
    font-weight: 300;
    padding: 0.5rem 2rem; 
    outline: none;
    border: none;
    line-height: 2rem;
    border-radius: 30px;
    border: none;
    margin-bottom: 1rem;
    color: #12112e;
    box-shadow: 0px 2px 12px 3px rgba(0,0,0,0.14);
    &:focus {
        outline: none;
        &::placeholder {
            opacity: 0; 
        }
    }
    &::placeholder {
        color: #bebebe;
        transition: all 250ms ease-in-out; 
    }
}

.button {
    background-color: #e03e15;
    color: white;
    letter-spacing: 0.2rem;
    border-radius: 5px;
    padding: 1rem 1.25rem;
    border: none;
    cursor: pointer;
    transition: .3s ease-in-out;
    &:hover {
        background-color: #293241; 
        color: orangered;
    }
}

.button:active {
    transform: translateY(6px);
}

@media (min-width: 786px) {
    .form {
        grid-template-columns: auto 1fr auto;
        grid-gap: 1rem;
        align-items: center;
    }
    .input {
        margin-bottom: 0; 
    }
}

.card-list {
    margin-top: 4rem; 
    padding-left: 50px;
    padding-right: 50px;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 120px 15px;
    @media (min-width: 400px) {
        grid-template-columns: repeat(2, 1fr);
    }
    @media (min-width: 800px) {
        grid-template-columns: repeat(3, 1fr);
    }
    @media (min-width: 1080px) {
        grid-template-columns: repeat(4, 1fr);
    }
    @media (min-width: 1280px) {
        grid-template-columns: repeat(5, 1fr);
    }
    @media (min-width: 1980px) {
        grid-template-columns: repeat(6, 1fr);
    }
}

.card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 0px;
    max-width: 100vw;
    height: auto;
    padding: 1rem 1rem;
    border-radius: 5px;
    // box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.488);
    background-color: #3d5a8000;
    transition: .2s ease-in-out;
    &:hover {
        box-shadow: 1px 15px 50px rgba(0, 0, 0, 0.687); 
        transform: perspective(500px) translate3d(0px, -10px, 50px);
        background-image: linear-gradient(#293241, #3d5a80); 
        }
    }


.card--title {
    margin: 5px 0px;
    font-size: 1rem;
    text-align: center; 
    color: #f5f5f5;
}

.card-content {
    position: absolute;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 395px;
    padding: 10px 5px;
    align-items: center;
    color: #f5f5f5;
    background-color: rgba(8, 17, 19, 0.94);
    border-radius: 5px;
    width: 225px;
    transition: .2s ease-in-out;
    &:hover {
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin-top: 225px;
        width: 225px;
        height: 200px; 
        box-shadow: 1px 15px 50px rgba(0, 0, 0, 0.687); 
        transform: perspective(500px) translate3d(0px, -10px, 50px);
        background-color: #3d5a80db;
        z-index: 2;
    }
}

.card--image {
    margin: 0px; 
    display: block;
    width: 200px;
    height: auto;
    box-shadow: 0px 5px 15px 1px rgba(18, 18, 17, 0.81);
    border-radius: 5px;
    transition: .1s ease-in-out;
    &:hover {
        transform: perspective(300px) translate3d(0px, -10px, 50px);
        z-index: 1;
    }
}

.card-desc {
    font-size: 1rem;
}

.movie-card-text {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    font-size: 1rem;
    margin: 0px;
}

.thumbs {
    margin-right: 3px;
    transition: .2s ease-in-out;
    &:hover {
        transform: rotate(45deg);
        
    }
}

.btn-more-info {
    background-color: #e03e15;
    width: 110px;
    height: auto;
    text-align: center;
    margin-top: 10px;
    padding: 5px 2px;
    border-radius: 75px;
    text-decoration: none;
    color: #f5f5f5;
    transition: .3s ease-in-out;
    &:hover {
        background-color: #da5b3c;
    }
  }

